Add marketplace task filters
